was added custom authManager, cookies storage for jwt-token. Was added fixes according to frame3.pdf